Fix misaligned button

--- a/frontend/src/components/TopBar.scss
+++ b/frontend/src/components/TopBar.scss
@@ -64,6 +64,7 @@
       border: none;
       cursor: pointer;
       outline: 0;
+      padding: 0;
     }
 
     &Form {
